frontend/test/should_pass/randomrule.grg
rule r
{
	modify {
		exec(one:int=1 ;> two:int=2 ;> three:int=3 ;> $[r] ;> $three[r] ;> $two,three[r] ;> $one,*[r]);
	}
}
