frontend/test/should_fail/exectype_AssignMapAccessToVar5.grg
using exectype;

rule r
{
	modify  {
		exec(m:map<A,H> =map<A,H> ;> aa:AA=varia && {h:HH=m[aa]}); // map yields only H, not HH
	}
}